@@ -1,5 +1,6 @@
 package code;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -8,9 +9,7 @@ public class TestRoom {
 
 
     public static void main(String[] args) throws IOException {
-        var str = new String(Files.readAllBytes(Path.of("Maps/map_094.txt")));
+        var str = Files.readString(Path.of(System.getProperty("user.dir") + "/src/Maps/94.json"));
         var room = new Room(str);
-
-        System.out.println(room.getSize());
     }
 }
